  * checks/deb-format.{desc,pm}:
    + [BR] Support all format described in deb(5)
      but manually reject until dak is ready.
  * checks/debian-source-dir.pm:
    + [NT] Fix regression where "missing-debian-source-format" was
      not emitted if "debian/source" was missing.  Thanks to
      Jean-Michel Nirgal Vourgère for finding this bug.
      (Closes: #781235)
  * checks/fields.{desc,pm}:
    + [BR] Add reference to build-depends-on-metapackage
      (Closes: #767107).
    + [BR] Check source version (Closes: #749103).
    + [NT] Import check of "Python-version: current" being
      deprecated from lintian4python.
    + [AB] Remove "dev" from list of suffixes to trigger
      rc-version-greater-than-expected-version (Closes: #732246)
    + [AB] Recognize user@host:path.git URIs in Vcs-Git (Closes: #778323)
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz.  (Closes: #751949).
    + [NT] Merge patch from Nicolas Boulenguez to remove some
      partially redundant code.  (Closes: #784277)
    + [NT] Allow "-dbgsym" as an alternative name to "-dbg" for
      packages containing debug symbols.
  * checks/init.d.desc:
    + [BR] Add reference to #DEBHELPER# token for
      script-in-etc-init.d-not-registered-via-update-rc.d.
      (Closes: #775467).
  * checks/patch-systems.pm:
    + [NT] Avoid crashing on debian/patches being a file.
      (Closes: #778556)
  * checks/po-debconf.pm:
    + [NT] Avoid errors from intltool-update.
      (Closes: #778558)
  * checks/script.{desc,pm}:
    + [BR] Fix some false negatives for
      command-with-path-in-maintainer-script tag.
      (Closes: #769845).
  * checks/shared-libs.{desc,pm}:
    + [NT] Apply patch from Guillem Jover to recognise the
      "Ignore-Blacklist-Groups" meta field in symbols files.
      (Closes: #781396)
  * checks/source-copyright.{desc,pm}:
    + [BR] Fix a false positive for